--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,15 @@
 ﻿{
   "name": "TabShot",
   "version": "1.0.2",
-  "description": "Makes a screenshot of the visible part.",
+  "description": "Make a screnshot of a web page.",
   "background": {
     "persistent": false,
     "scripts": ["scripts/background.js"]
   },
   "browser_action": {
     "default_icon": "images/icon.png",
-    "default_title": "Screenshot!"
+    "default_popup":  "drop-down.html",
+    "default_title": "Make screenshot!"
   },
   "permissions": [
     "activeTab",
