--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 ﻿{
   "name": "TabShot",
   "version": "1.0.2",
-  "description": "Make a screnshot of a web page.",
+  "description": "Make a screenshot of a web page.",
   "background": {
     "persistent": false,
     "scripts": ["scripts/background.js"]
